Development version Beta 0.9.7 - UNRELEASED
- Set timer to 0 every time you have to restart the game/go to menu